tests/ui/const-generics/mgca/trait-assoc-fn-as-const-arg.stderr
error[E0391]: cycle detected when evaluating type-level constant
  --> $DIR/trait-assoc-fn-as-const-arg.rs:5:26
   |
LL |     fn x(&self) -> [i32; Bar::x];
   |                          ^^^^^^
   |
   = note: ...which requires const-evaluating + checking `Bar::x::{constant#0}`...
   = note: ...which requires const-evaluating + checking `Bar::x::{constant#0}`...
   = note: ...which requires checking if `Bar::x::{constant#0}` is a trivial const...
   = note: ...which requires building MIR for `Bar::x::{constant#0}`...
   = note: ...which requires match-checking `Bar::x::{constant#0}`...
   = note: ...which requires type-checking `Bar::x::{constant#0}`...
   = note: ...which again requires evaluating type-level constant, completing the cycle
   = note: cycle used when checking that `Bar::x` is well-formed
   = note: for more information, see <https://rustc-dev-guide.rust-lang.org/overview.html#queries> and <https://rustc-dev-guide.rust-lang.org/query.html>

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
